modificacao do footer

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>Flex Turismos</title>
-	<link rel="stylesheet" href="./style.css" />
+	<link rel="stylesheet" media="(max-width: 992px)" href="./style.css" />
 </head>
 
 <body>
@@ -138,7 +138,7 @@
 
 	<footer>
 		<div class="flex-container footer">
-			<p>&copy; 2021 CSS Flexbox</p>
+			<p>&copy; 2022 CSS Flexbox</p>
 			<p>Desenvolvido por: Lilian Paim</p>
 		</div>
 	</footer>
